--- a/tools/Pliant.Workbench/packages.config
+++ b/tools/Pliant.Workbench/packages.config
@@ -2,7 +2,5 @@
 <packages>
   <package id="AngleSharp" version="0.9.8" targetFramework="net45" />
   <package id="AvalonEdit" version="5.0.4" targetFramework="net45" />
-  <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.9.1" targetFramework="net45" />
-  <package id="MahApps.Metro.IconPacks.Material" version="1.9.1" targetFramework="net45" />
-  <package id="MahApps.Metro.IconPacks.Octicons" version="1.9.1" targetFramework="net45" />
+  <package id="MahApps.Metro.IconPacks" version="1.9.1" targetFramework="net45" />
 </packages>
